--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,7 @@ jobs:
         with:
           persist-credentials: false
 
-      
-      - name: set env variable CNAME
-        run: echo 'CNAME=${{ steps.cname.outputs.content }}' >> $GITHUB_ENV
-        
-      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+      - name: Install and Build 🔧
         run: |
           npm install
           npm run build
